Add ratatui based TUI as default interactive mode
Replaces rustyline REPL with a full terminal UI built on ratatui +
Crossterm. Scrollable chat with streaming support, welcome banner,
multi-line input area, status bar. You can go back to rustyline using
--no-tui flag.

--- a/tycode-cli/Cargo.toml
+++ b/tycode-cli/Cargo.toml
@@ -37,3 +37,9 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 similar = "2.4"
 
+# TUI dependencies
+ratatui = "0.29"
+crossterm = { version = "0.28", features = ["event-stream"] }
+tui-textarea = "0.7"
+futures = "0.3"
+
